--- a/AspNetKurumsalWeb/Views/Admin/Index.cshtml
+++ b/AspNetKurumsalWeb/Views/Admin/Index.cshtml
@@ -15,6 +15,10 @@
                 <ol class="breadcrumb">
                     <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
                     <li><i class="fa fa-laptop"></i>Dashboard</li>
+                    @foreach (var item in Model)
+                    {
+                        <li>@item.KategoriAd</li>
+                    }
                 </ol>
             </div>
         </div>
