--- a/AspNetKurumsalWeb/Views/Shared/_AdminLayout.cshtml
+++ b/AspNetKurumsalWeb/Views/Shared/_AdminLayout.cshtml
@@ -414,8 +414,14 @@
         </aside>
         <!--sidebar end-->
         <!--main content start-->
-
-        @RenderBody()
+        <section id="main-content">
+            <section class="wrapper">
+                @RenderBody()
+            </section>
+        </section>
+           
+    
+    
         <!--main content end-->
     </section>
     <!-- container section start -->
