--- a/AspNetKurumsalWeb/Views/Kimlik/Index.cshtml
+++ b/AspNetKurumsalWeb/Views/Kimlik/Index.cshtml
@@ -46,7 +46,7 @@
                         @Html.DisplayFor(modelItem => item.Description)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.LogoURL)
+                       <img  src="@item.LogoURL" width="300" height="200"/>
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Unvan)
