--- a/AspNetKurumsalWeb/Views/Shared/_AdminLayout.cshtml
+++ b/AspNetKurumsalWeb/Views/Shared/_AdminLayout.cshtml
@@ -341,7 +341,31 @@
                     <li class="active">
                         <a class="" href="index.html">
                             <i class="icon_house_alt"></i>
-                            <span>Dashboard</span>
+                            <span>Admin Özet</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="" href="/Kimlik/Index">
+                            <i class="icon_genius"></i>
+                            <span>Site Kimlik</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="" href="/Hakkimizda/Index">
+                            <i class="icon_genius"></i>
+                            <span>Hakkımızda</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="" href="/Iletisim/Index">
+                            <i class="icon_genius"></i>
+                            <span>İletişim</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="" href="/Hizmet/Index">
+                            <i class="icon_genius"></i>
+                            <span>Hizmetler</span>
                         </a>
                     </li>
                     <li class="sub-menu">
