--- a/AspNetKurumsalWeb/Views/Kimlik/Edit.cshtml
+++ b/AspNetKurumsalWeb/Views/Kimlik/Edit.cshtml
@@ -4,7 +4,9 @@
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-
+<script type="text/javascript">
+    CKEDITOR.replace('editor')
+</script>
 <h2>Düzenle</h2>
 
 @using (Html.BeginForm("Edit","Kimlik",FormMethod.Post, new {enctype = "multipart/form-data" } ))
@@ -38,8 +40,8 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+            <textarea name="Description" class="ckeditor">@Model.Description</textarea>
+            
         </div>
     </div>
 
