--- a/AspNetKurumsalWeb/Views/Kimlik/Index.cshtml
+++ b/AspNetKurumsalWeb/Views/Kimlik/Index.cshtml
@@ -10,7 +10,7 @@
         <p>
             @Html.ActionLink("Yeni Ekle", "Create")
         </p>
-        <table class="table">
+        <table class="table table-bordered table-striped table-responsive-sm ">
             <tr>
                 <th>
                     @Html.DisplayNameFor(model => model.Title)
@@ -43,10 +43,10 @@
                         @Html.DisplayFor(modelItem => item.Keywords)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Description)
+                        @Html.Raw(item.Description)
                     </td>
                     <td>
-                       <img  src="@item.LogoURL" width="300" height="200"/>
+                       <img class="img-responsive"  src="@item.LogoURL" width="300" height="200"/>
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Unvan)
