--- a/AspNetKurumsalWeb/Views/Home/Index.cshtml
+++ b/AspNetKurumsalWeb/Views/Home/Index.cshtml
@@ -12,34 +12,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <!-- Slider -->
-                <div id="main-slider" class="flexslider">
-                    <ul class="slides">
-                        <li>
-                            <img src="/Content/SiteLayout/img/slides/1.jpg" alt="" />
-                            <div class="flex-caption">
-                                <h3>Modern Design</h3>
-                                <p>Duis fermentum auctor ligula ac malesuada. Mauris et metus odio, in pulvinar urna</p>
-                                <a href="#" class="btn btn-theme">Learn More</a>
-                            </div>
-                        </li>
-                        <li>
-                            <img src="/Content/SiteLayout/img/slides/2.jpg" alt="" />
-                            <div class="flex-caption">
-                                <h3>Fully Responsive</h3>
-                                <p>Sodales neque vitae justo sollicitudin aliquet sit amet diam curabitur sed fermentum.</p>
-                                <a href="#" class="btn btn-theme">Learn More</a>
-                            </div>
-                        </li>
-                        <li>
-                            <img src="/Content/SiteLayout/img/slides/3.jpg" alt="" />
-                            <div class="flex-caption">
-                                <h3>Clean & Fast</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit donec mer lacinia.</p>
-                                <a href="#" class="btn btn-theme">Learn More</a>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
+                @{ Html.RenderAction("SliderPartial", "Home");}
                 <!-- end slider -->
             </div>
         </div>
@@ -48,7 +21,7 @@
 
 
 </section>
-<section class="callaction">
+@*<section class="callaction">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
@@ -60,10 +33,10 @@
             </div>
         </div>
     </div>
-</section>
+</section>*@
 <section id="content">
     <div class="container">
-        <div class="row">
+        @*<div class="row">
             <div class="col-lg-12">
                 <div class="row">
                     <div class="col-lg-3">
@@ -136,7 +109,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>*@
         <!-- divider -->
         <div class="row">
             <div class="col-lg-12">
@@ -148,56 +121,32 @@
         <!-- Portfolio Projects -->
         <div class="row">
             <div class="col-lg-12">
-                <h4 class="heading">Recent Works</h4>
+                <h4 class="heading">Hizmetlerimiz</h4>
                 <div class="row">
                     <section id="projects">
+
                         <ul id="thumbs" class="portfolio">
                             <!-- Item Project and Filter Name -->
-                            <li class="col-lg-3 design" data-id="id-0" data-type="web">
-                                <div class="item-thumbs">
-                                    <!-- Fancybox - Gallery Enabled - Title - Full Image -->
-                                    <a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Work 1" href="img/works/1.jpg">
-                                        <span class="overlay-img"></span>
-                                        <span class="overlay-img-thumb font-icon-plus"></span>
-                                    </a>
-                                    <!-- Thumb Image and Description -->
-                                    <img src="/Content/SiteLayout/img/works/1.jpg" alt="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis elementum odio. Curabitur pellentesque, dolor vel pharetra mollis.">
-                                </div>
-                            </li>
-                            <!-- End Item Project -->
-                            <!-- Item Project and Filter Name -->
-                            <li class="item-thumbs col-lg-3 design" data-id="id-1" data-type="icon">
-                                <!-- Fancybox - Gallery Enabled - Title - Full Image -->
-                                <a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Work 2" href="img/works/2.jpg">
-                                    <span class="overlay-img"></span>
-                                    <span class="overlay-img-thumb font-icon-plus"></span>
-                                </a>
-                                <!-- Thumb Image and Description -->
-                                <img src="/Content/SiteLayout/img/works/2.jpg" alt="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis elementum odio. Curabitur pellentesque, dolor vel pharetra mollis.">
-                            </li>
-                            <!-- End Item Project -->
-                            <!-- Item Project and Filter Name -->
-                            <li class="item-thumbs col-lg-3 photography" data-id="id-2" data-type="illustrator">
-                                <!-- Fancybox - Gallery Enabled - Title - Full Image -->
-                                <a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Work 3" href="img/works/3.jpg">
-                                    <span class="overlay-img"></span>
-                                    <span class="overlay-img-thumb font-icon-plus"></span>
-                                </a>
-                                <!-- Thumb Image and Description -->
-                                <img src="/Content/SiteLayout/img/works/3.jpg" alt="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis elementum odio. Curabitur pellentesque, dolor vel pharetra mollis.">
-                            </li>
-                            <!-- End Item Project -->
-                            <!-- Item Project and Filter Name -->
-                            <li class="item-thumbs col-lg-3 photography" data-id="id-2" data-type="illustrator">
-                                <!-- Fancybox - Gallery Enabled - Title - Full Image -->
-                                <a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Work 4" href="img/works/4.jpg">
-                                    <span class="overlay-img"></span>
-                                    <span class="overlay-img-thumb font-icon-plus"></span>
-                                </a>
-                                <!-- Thumb Image and Description -->
-                                <img src="/Content/SiteLayout/img/works/4.jpg" alt="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis elementum odio. Curabitur pellentesque, dolor vel pharetra mollis.">
-                            </li>
-                            <!-- End Item Project -->
+                            @foreach (var item in ViewBag.Hizmetler)
+                            {
+                                <li class="col-lg-3 design" data-id="id-0" data-type="web">
+                                    <div class="item-thumbs">
+                                        <!-- Fancybox - Gallery Enabled - Title - Full Image -->
+                                        <a class="hover-wrap fancybox" data-fancybox-group="gallery" title="@item.Baslik | @item.Aciklama" href="">
+                                       
+                                            <img src="@item.ResimURL" width="300" height="300"/>
+                                            <span class="overlay-img"></span>
+                                            <span class="overlay-img-thumb font-icon-plus"></span>
+                                        </a>
+                                        <!-- Thumb Image and Description -->
+                                        <div  >
+                                            <img src="@item.ResimURL" class="img-fluid" alt="@item.Aciklama">
+                                        </div>
+                                        
+                                    </div>
+                                </li>
+                            }
+
                         </ul>
                     </section>
                 </div>
