--- a/AspNetKurumsalWeb/Views/Shared/_SiteLayout.cshtml
+++ b/AspNetKurumsalWeb/Views/Shared/_SiteLayout.cshtml
@@ -44,73 +44,82 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="index.html"><span>M</span>oderna</a>
+                        <a class="navbar-brand" href="index.html"><span>K</span>urumsalWeb</a>
                     </div>
                     <div class="navbar-collapse collapse ">
                         <ul class="nav navbar-nav">
-                            <li class="active"><a href="index.html">Home</a></li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Features <b class=" icon-angle-down"></b></a>
+                            <li class="active"><a href="/Home/Index">Ana Sayfa</a></li>
+                            @*<li class="dropdown">
+                                <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Hakkımızda <b class=" icon-angle-down"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="typography.html">Typography</a></li>
-                                    <li><a href="components.html">Components</a></li>
+                                    <li><a href="/Home/Hakkimizda/">Hakkımızda</a></li>
+                                    <li><a href="/Home/Hizmetlerimiz/">Hizmetlerimiz</a></li>
                                     <li><a href="pricingbox.html">Pricing box</a></li>
                                 </ul>
-                            </li>
-                            <li><a href="portfolio.html">Portfolio</a></li>
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            </li>*@
+                            <li><a href="/Home/Hakkimizda/">Hakkımızda</a></li>
+                            <li><a href="/Home/Hizmetlerimiz/">Hizmetlerimiz</a></li>
+                            <li><a href="/Home/Blog/">Blog</a></li>
+                            <li><a href="/Home/Iletisim/">İletişim</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
         </header>
         <!-- end header -->
+
        @RenderBody()
         <footer>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-3">
                         <div class="widget">
-                            <h5 class="widgetheading">Get in touch with us</h5>
+                            <h5 class="widgetheading">Kurumsal Web Sitesi Projesi</h5>
                             <address>
-                                <strong>Moderna company Inc</strong><br>
-                                Modernbuilding suite V124, AB 01<br>
-                                Someplace 16425 Earth
+                                <strong>@ViewBag.Iletisim.Adres</strong><br>
+                              
                             </address>
                             <p>
-                                <i class="icon-phone"></i> (123) 456-7890 - (123) 555-7891 <br>
-                                <i class="icon-envelope-alt"></i> email@domainname.com
+                                <i class="icon-phone"></i>Tel: @ViewBag.Iletisim.Telefon<br>
+                                <i class="icon-phone"></i>Whatsapp: @ViewBag.Iletisim.Whatsapp<br>
+                                <i class="icon-envelope-alt"></i>Fax: @ViewBag.Iletisim.Fax
                             </p>
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="widget">
-                            <h5 class="widgetheading">Pages</h5>
+                            <h5 class="widgetheading">Menü</h5>
                             <ul class="link-list">
-                                <li><a href="#">Press release</a></li>
-                                <li><a href="#">Terms and conditions</a></li>
-                                <li><a href="#">Privacy policy</a></li>
-                                <li><a href="#">Career center</a></li>
-                                <li><a href="#">Contact us</a></li>
+                                <li><a href="/Home/Index/">Ana Sayfa</a></li>
+                                <li><a href="/Home/Hakkimizda/">Hakkımızda</a></li>
+                                <li><a href="/Home/Blog/">Blog</a></li>
+                                <li><a href="/Home/Hizmetlerimiz/">Hizmetler</a></li>
+                                <li><a href="/Home/Iletisim/">İletişim</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="widget">
-                            <h5 class="widgetheading">Latest posts</h5>
+                            <h5 class="widgetheading">Son Blog Yazıları</h5>
                             <ul class="link-list">
-                                <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></li>
-                                <li><a href="#">Pellentesque et pulvinar enim. Quisque at tempor ligula</a></li>
-                                <li><a href="#">Natus error sit voluptatem accusantium doloremque</a></li>
+
+
+                                @foreach (var item in ViewBag.Blog)
+                                {
+                                    <li><a href="/Home/BlogDetay/@item.BlogId">@item.Baslik</a></li>
+                                }
                             </ul>
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="widget">
-                            <h5 class="widgetheading">Flickr photostream</h5>
+                            <h5 class="widgetheading">Hizmetlerimiz</h5>
                             <div class="flickr_badge">
-                                <script type="text/javascript" src="https://www.flickr.com/badge_code_v2.gne?count=8&amp;display=random&amp;size=s&amp;layout=x&amp;source=user&amp;user=34178660@N03"></script>
+                                @foreach (var item in ViewBag.Hizmetler)
+                                {
+                                    <img src="@item.ResimURL" width="75" height="30"/>
+                                }
+
                             </div>
                             <div class="clear">
                             </div>
@@ -123,7 +132,7 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="copyright">
-                                <p>&copy; Moderna Theme. All right reserved.</p>
+                                <p>@DateTime.Now.Year &copy; Tüm Hakları Gizlidir</p>
                                 <div class="credits">
                                     <!--
                                       All the links in the footer should remain intact.
@@ -131,13 +140,13 @@
                                       Licensing information: https://bootstrapmade.com/license/
                                       Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Moderna
                                     -->
-                                    Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                                    Tasarlandı <a href="https://kurumsalweb.com/">KurumsalWeb</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <ul class="social-network">
-                                <li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="www.facebook.com/@ViewBag.Iletisim.Facebook" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
                                 <li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
                                 <li><a href="#" data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
                                 <li><a href="#" data-placement="top" title="Pinterest"><i class="fa fa-pinterest"></i></a></li>
@@ -166,8 +175,8 @@
     <script src="/Content/SiteLayout/js/animate.js"></script>
     <script src="/Content/SiteLayout/js/custom.js"></script>
 
-    <script src="~/Scripts/jquery-3.3.1.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
+    @*<script src="~/Scripts/jquery-3.3.1.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>*@
 
 
 </body>
