--- a/AspNetKurumsalWeb/Views/Home/Blog.cshtml
+++ b/AspNetKurumsalWeb/Views/Home/Blog.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<AspNetKurumsalWeb.Models.Model.Blog>
+﻿@using PagedList;
+@using PagedList.Mvc;
+@model IPagedList<AspNetKurumsalWeb.Models.Model.Blog>
 @{
     ViewBag.Title = "Blog";
     Layout = "~/Views/Shared/_SiteLayout.cshtml";
@@ -45,10 +47,7 @@
 
 
                 <div id="pagination">
-                    <span class="all">Page 1 of 3</span>
-                    <span class="current">1</span>
-                    <a href="#" class="inactive">2</a>
-                    <a href="#" class="inactive">3</a>
+                    @Html.PagedListPager(Model,Sayfa=>Url.Action("Blog",new { Sayfa}),PagedListRenderOptions.Classic)
                 </div>
             </div>
             <div class="col-lg-4">
