--- a/AspNetKurumsalWeb/Views/Home/BlogDetay.cshtml
+++ b/AspNetKurumsalWeb/Views/Home/BlogDetay.cshtml
@@ -43,8 +43,39 @@
                        
                     </article>
               
-                
 
+                        <div class="row">
+                            <div class="col-lg-8">
+                                <h3>Yorum Yap</h3>
+                                <form >
+                                    <div>
+                                        <input type="text" id="adsoyad" placeholder="Adınız Soyadınız" required class="form-control" />
+                                        <br />
+                                        <input type="email" id="eposta" placeholder="Mail Adresiniz" required class="form-control" />
+                                        <br />
+                                        <textarea typeof="text" id="icerik" class="form-control"></textarea>
+                                        <br />
+                                        <button type="submit" class="btn btn-success" id="gonder">Yorum Yap</button>
+                                    </div>
+                                </form>
+                            </div>
+
+                        </div>
+                <div class="row">
+                    <div>
+                        <h3>Blog Makale Yorumları</h3>
+                        @foreach (var item in Model.Yorums.OrderByDescending(x=>x.YorumId).Where(x=>x.Onay ==true))
+                        {
+                            <p>@item.AdSoyad - @item.Eposta</p>
+                            <p>@item.Icerik</p>
+                            <hr />
+                        }
+
+                    </div>
+                </div>
+              
+              
+              
         
             </div>
             <div class="col-lg-4"> 
@@ -78,3 +109,24 @@
     </div>
 </section>
 
+<script src="~/Content/SiteLayout/js/jquery.js"></script>
+<script type="text/javascript">
+    $(document).ready(function ()
+    {
+        $("#gonder").click(function () {
+            var adisoyadi = $("#adsoyad").val();
+            var epostasi = $("#eposta").val();
+            var yorumunuz = $("#icerik").val();
+            $.ajax({
+                url: '/Home/YorumYap/',
+                data: { adsoyad: adisoyadi, eposta: epostasi, icerik: yorumunuz, blogid: @Model.BlogId },
+                type: 'POST',
+                dataType: 'json',
+                success: function (data) {
+                    alert(" - Yorumunuz Eklendi. Kontrol Edildikten sonra yayınlanacaktır.");
+                }
+            });
+        });
+    })
+   
+</script>
