--- a/AspNetKurumsalWeb/Views/Home/KategoriBlog.cshtml
+++ b/AspNetKurumsalWeb/Views/Home/KategoriBlog.cshtml
@@ -1,19 +1,20 @@
-﻿@using PagedList;
+﻿@model IPagedList<AspNetKurumsalWeb.Models.Model.Blog>
+@using PagedList;
 @using PagedList.Mvc;
 @using AspNetKurumsalWeb.Helper;
-
-@model IPagedList<AspNetKurumsalWeb.Models.Model.Blog>
 @{
-    ViewBag.Title = "Blog";
+    ViewBag.Title = "KategoriBlog";
     Layout = "~/Views/Shared/_SiteLayout.cshtml";
 }
+
+<h2>KategoriBlog</h2>
 <section id="inner-headline">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
                 <ul class="breadcrumb">
                     <li><a href="#"><i class="fa fa-home"></i></a><i class="icon-angle-right"></i></li>
-                    <li class="active">Blog</li>
+                    <li class="active">Kategori Blog</li>
                 </ul>
             </div>
         </div>
@@ -33,7 +34,7 @@
                             <img src="@item.ResimURL" alt="@item.Baslik" />
                         </div>
                         <p>
-                          @Html.Raw(item.Icerik.Substring(0,10))
+                            @Html.Raw(item.Icerik.Substring(0, 10))
                         </p>
                         <div class="bottom-article">
                             <ul class="meta-post">
@@ -42,14 +43,14 @@
                                 <li><i class="icon-folder-open"></i><a href="#"> @item.Kategori.KategoriAd</a></li>
                                 @*<li><i class="icon-comments"></i><a href="#">4 Comments</a></li>*@
                             </ul>
-                            <a href="/BlogPost/@SeoHelper.ToSeoUrl(item.Baslik).ToLower()-@item.BlogId" class="pull-right">Okumaya Devam edebilirsiniz<i class="icon-angle-right"></i></a>
+                            <a href="/Home/BlogDetay/@item.BlogId" class="pull-right">Okumaya Devam edebilirsiniz<i class="icon-angle-right"></i></a>
                         </div>
                     </article>
                 }
 
 
                 <div id="pagination">
-                    @Html.PagedListPager(Model,Sayfa=>Url.Action("Blog",new { Sayfa}),PagedListRenderOptions.Classic)
+                    @Html.PagedListPager(Model, Sayfa => Url.Action("Blog", new { Sayfa }), PagedListRenderOptions.Classic)
                 </div>
             </div>
             <div class="col-lg-4">
@@ -61,9 +62,9 @@
                     </div>
                     <div class="widget">
                         <h5 class="widgetheading">Kategoriler</h5>
-                      @{ 
-                          Html.RenderAction("BlogKategoriPartial", "Home");
-                      }
+                        @{
+                            Html.RenderAction("BlogKategoriPartial", "Home");
+                        }
 
 
 
@@ -71,14 +72,15 @@
                     <div class="widget">
                         <h5 class="widgetheading">Son Blog Kayıtları</h5>
                         <ul class="recent">
-                          @{ 
-                              Html.RenderAction("BlogKayitPartial", "Home");
-                          }
+                            @{
+                                Html.RenderAction("BlogKayitPartial", "Home");
+                            }
                         </ul>
                     </div>
-                    
+
                 </aside>
             </div>
         </div>
     </div>
 </section>
+
