--- a/AspNetKurumsalWeb/Views/Shared/_SiteLayout.cshtml
+++ b/AspNetKurumsalWeb/Views/Shared/_SiteLayout.cshtml
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Kurumsal Web Sitemiz</title>
-    <meta name="description" content="" />
+    <title>@ViewBag.Title - @ViewBag.Kimlik.Title</title>
+    <meta name="description" content="@Html.Raw( ViewBag.Kimlik.Description)" />
+    <meta name="keywords" content="@ViewBag.Kimlik.Keywords"/>
 
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
 
@@ -44,11 +45,11 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href=""><span>K</span>urumsalWeb</a>
+                        <a class="navbar-brand" href="">@*<span>K</span>urumsalWeb*@<img src="@ViewBag.Kimlik.LogoURL" height="30" width="75"/> @ViewBag.Kimlik.Unvan</a>
                     </div>
                     <div class="navbar-collapse collapse ">
                         <ul class="nav navbar-nav">
-                            <li class="active"><a href="/Home/Index">Ana Sayfa</a></li>
+                            <li class="active"><a href="/Anasayfa">Ana Sayfa</a></li>
                             @*<li class="dropdown">
                                 <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Hakkımızda <b class=" icon-angle-down"></b></a>
                                 <ul class="dropdown-menu">
@@ -57,10 +58,10 @@
                                     <li><a href="pricingbox.html">Pricing box</a></li>
                                 </ul>
                             </li>*@
-                            <li><a href="/Home/Hakkimizda/">Hakkımızda</a></li>
-                            <li><a href="/Home/Hizmetlerimiz/">Hizmetlerimiz</a></li>
-                            <li><a href="/Home/Blog/">Blog</a></li>
-                            <li><a href="/Home/Iletisim/">İletişim</a></li>
+                            <li><a href="/Hakkimizda/">Hakkımızda</a></li>
+                            <li><a href="/Hizmetlerimiz/">Hizmetlerimiz</a></li>
+                            <li><a href="/BlogPost/">Blog</a></li>
+                            <li><a href="/iletisim/">İletişim</a></li>
                         </ul>
                     </div>
                 </div>
